--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,44 @@
 @import url('https://fonts.googleapis.com/css?family=Amatic+SC&display=swap');
+
+:root {
+    --color-1:#3CAEA3;
+    --color-2:#F6D55C;
+    --color-3:#ffffff;
+    --color-4:#ED553B;
+}
+
 body{
-    background-color: #3CAEA3;
+    background-color: var(--color-1);
     overflow: hidden;
+}
+#front{
+    position: absolute;
+    right: 30px;
+    top: -25px;
+    z-index: 2;
+    width: 300px;
+    height: 300px;
+    text-align: center;
+}
+#front_btn{
+    padding-top: 0px;
+    padding-bottom: 50px;
+    transition-duration: 300ms;
+}
+#front_btn:hover{
+    padding-top: 50px;
+    padding-bottom: 0px;
+    transition-duration: 300ms;
+}
+
+#controls{
+    background-color: rgba(255,255,255,0.95);
+    position: absolute;
+    top:0;
+    width: 300px;
+    height: 400px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 #label{
@@ -14,15 +51,20 @@ body{
     padding: 20px;
     border-radius: 20px;
     font-family: 'Amatic SC', cursive;
+    width: 200px;
+    line-height: 50%;
 }
 h1{
-
+    font-size: 35px; 
+    font-family: 'Amatic SC', cursive;
 }
 h2{
-
+    font-size: 25px;
+    font-family: 'Amatic SC', cursive;
 }
 h3{
-    
+    font-size: 15px;
+    font-family: 'Amatic SC', cursive;
 }
 #label:hover{
     transition-duration: 300ms;
@@ -33,11 +75,12 @@ h3{
 
 #pattern-container{
     display: inline-block;
-    margin-left: -300px;
+    margin-left: -600px;
     margin-right: -400px;
+    width: 200%;
 }
 #line1{
-    background-color: #ED553B;
+    background-color: var(--color-4);
     -ms-transform: rotate(-45deg); /* IE 9 */
     -webkit-transform: rotate(-45deg); /* Safari */
     transform: rotate(-45deg);
@@ -48,7 +91,7 @@ h3{
     position: absolute;
 }
 #line2{
-    background-color: #ED553B;
+    background-color: var(--color-4);
     -ms-transform: rotate(45deg); /* IE 9 */
     -webkit-transform: rotate(45deg); /* Safari */
     transform: rotate(45deg);
@@ -58,10 +101,32 @@ h3{
     margin-top: -55px;
     position: absolute;
 }
+#line3{
+    background-color: var(--color-4);
+    -ms-transform: rotate(45deg); /* IE 9 */
+    -webkit-transform: rotate(45deg); /* Safari */
+    transform: rotate(45deg);
+    width: 2px;
+    height: 200px;
+    margin-left: 45px;
+    margin-top: -55px;
+    position: absolute;
+}
+#line4{
+    background-color: var(--color-4);
+    -ms-transform: rotate(45deg); /* IE 9 */
+    -webkit-transform: rotate(45deg); /* Safari */
+    transform: rotate(45deg);
+    width: 2px;
+    height: 200px;
+    margin-left: 65px;
+    margin-top: -55px;
+    position: absolute;
+}
 #color{
     width: 100px;
     height: 100px;
-    background-color: #F6D55C;
+    background-color: var(--color-2);
     -ms-transform: rotate(45deg); /* IE 9 */
     -webkit-transform: rotate(45deg); /* Safari */
     transform: rotate(45deg);
@@ -70,7 +135,7 @@ h3{
 #color2{
     width: 100px;
     height: 100px;
-    background-color: #F6D55C;
+    background-color: var(--color-3);
     -ms-transform: rotate(45deg); /* IE 9 */
     -webkit-transform: rotate(45deg); /* Safari */
     transform: rotate(45deg);
