add frame counter

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,6 +26,8 @@
                 <h2>Secondary Color 1   <input onchange="change2(this.value)" type="color" id="colorpick2"></h2>
                 <h2>Secondary Color 2   <input onchange="change3(this.value)" type="color" id="colorpick3"></h2>
                 <h2>Ribbon Color   <input onchange="change4(this.value)" type="color" id="colorpick4"></h2>
+
+                <span id="frame">test</span>
             </div>
         </div>
 
