--- a/public/css/main.css
+++ b/public/css/main.css
@@ -66,6 +66,10 @@ h3{
     font-size: 15px;
     font-family: 'Amatic SC', cursive;
 }
+#frame{
+    font-size: 20px;
+    font-family: 'Amatic SC', cursive;
+}
 #label:hover{
     transition-duration: 300ms;
     background-color: rgba(255,255,255,0.95);
