--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,8 @@
                 <h2>Primary Color   <input onchange="change1(this.value)" type="color" id="colorpick1"></h2>
                 <h2>Secondary Color 1   <input onchange="change2(this.value)" type="color" id="colorpick2"></h2>
                 <h2>Secondary Color 2   <input onchange="change3(this.value)" type="color" id="colorpick3"></h2>
-                <h2>Ribbon Color   <input onchange="change4(this.value)" type="color" id="colorpick4"></h2>
+                <h2>Ribbon Color 1  <input onchange="change4(this.value)" type="color" id="colorpick4"></h2>
+                <h2>Ribbon Color 2  <input onchange="change5(this.value)" type="color" id="colorpick5"></h2>
 
                 <span id="frame">test</span>
             </div>
