--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,6 +44,8 @@
                         <div id="line2"></div>
                         <div id="line3"></div>
                         <div id="line4"></div>
+                        <div id="line5"></div>
+                        <div id="line6"></div>
                     </div>
                     <div id="block">
                         <div id="color2">
@@ -53,6 +55,8 @@
                         <div id="line2"></div>
                         <div id="line3"></div>
                         <div id="line4"></div>
+                        <div id="line5"></div>
+                        <div id="line6"></div>
                     </div>
                 <% } %>
                 </span>
